# Predicting-Disease-Spread

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters.yml
data/08_reporting/: correlation_matrix_plot.html  dengue_submission.csv  feature_importance_plot.html
src/predicting_disease_spread/: __init__.py  __main__.py  pipeline.py  pipeline_registry.py  settings.py
src/predicting_disease_spread/pipelines/data_processing/: __init__.py  nodes.py
src/predicting_disease_spread/pipelines/feature_engineering/: __init__.py  nodes.py  pipeline.py
src/predicting_disease_spread/pipelines/modeling/: nodes.py
src/predicting_disease_spread/pipelines/submission/: nodes.py
src/predicting_disease_spread/pipelines/visualization/: visualization.py
tests/: test_run.py
tests/pipelines/data_science/: test_pipeline.py
